resources/gatekeeper/constraints/99-k8sallowedregistries-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRegistries
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  name: allow-approved-registries
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaceSelector:
      matchExpressions:
      - key: policy-tier
        operator: In
        values:
        - playground
  parameters:
    registries:
    - nexus.gillouche.homelab/
