resources/gatekeeper/constraints/99-k8sblockplainsecrets-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockPlainSecrets
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  name: block-plain-secrets
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Secret
    namespaceSelector:
      matchExpressions:
      - key: policy-tier
        operator: In
        values:
        - playground
  parameters:
    excludedUsers:
    - system:serviceaccount:kube-system:sealed-secrets-controller
