resources/gatekeeper/constraints/99-k8sdisallowlatest-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  name: disallow-latest-tag
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaceSelector:
      matchExpressions:
      - key: policy-tier
        operator: In
        values:
        - playground
