resources/gatekeeper/constraints/99-k8snoescalation-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoPrivilegeEscalation
metadata:
  name: disallow-privilege-escalation
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: policy-tier
          operator: In
          values: ["playground"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - kube-public
      - longhorn-system
      - kubernetes-dashboard
      - sealed-secrets
