resources/gatekeeper/constraints/99-k8sreadonlyrootfs-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sReadOnlyRootFS
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  name: require-readonly-rootfs
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
    - kube-system
    - gatekeeper-system
    - kube-public
    - longhorn-system
    - kubernetes-dashboard
    - sealed-secrets
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaceSelector:
      matchExpressions:
      - key: policy-tier
        operator: In
        values:
        - playground
