resources/gatekeeper/constraints/99-k8srequiredannotations-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  name: require-owner-annotation
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
    - kube-system
    - gatekeeper-system
    - kube-public
    - longhorn-system
    - kubernetes-dashboard
    - sealed-secrets
    kinds:
    - apiGroups:
      - apps
      kinds:
      - Deployment
    namespaceSelector:
      matchExpressions:
      - key: policy-tier
        operator: In
        values:
        - playground
  parameters:
    annotations:
    - owner
