resources/gatekeeper/constraints/99-k8srequiredlabels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-standard-labels
spec:
  enforcementAction: dryrun
  parameters:
    labels:
      - app.kubernetes.io/name
      - app.kubernetes.io/part-of
      - app.kubernetes.io/managed-by
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaceSelector:
      matchExpressions:
        - key: policy-tier
          operator: In
          values: ["playground"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - kube-public
      - longhorn-system
      - kubernetes-dashboard
      - sealed-secrets
