resources/gatekeeper/constraints/99-k8sresourcelimits-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sResourceLimits
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  name: require-resource-limits
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - apps
      kinds:
      - Deployment
    namespaceSelector:
      matchExpressions:
      - key: policy-tier
        operator: In
        values:
        - playground
